--- a/css/bondi.css
+++ b/css/bondi.css
@@ -28,12 +28,14 @@ html {
   left: 50%;
   transform: translateX(-50%);
 }
-.navbar .navbar-nav .nav-link {
+.navbar .navbar-nav .nav-link,
+.subscribe ::placeholder {
   color: white;
 }
 .navbar .navbar-nav .nav-link.active,
 .navbar .navbar-nav .nav-link:focus,
-.navbar .navbar-nav .nav-link:hover {
+.navbar .navbar-nav .nav-link:hover,
+.features .icon-holder .icon {
   color: var(--green-color);
 }
 .navbar .search {
@@ -64,13 +66,12 @@ html {
   font-size: 12rem;
   color: var(--section-color);
 }
-.features .icon-holder .icon {
-  color: var(--green-color);
-}
-.features .feat h4 {
+.features .feat h4,
+.team h2 {
   color: var(--yellow-color);
 }
-.our-work {
+.our-work,
+.team {
   background-color: var(--section-color);
 }
 .our-work ul .active {
@@ -107,16 +108,11 @@ html {
 .stuff .description {
   max-width: 500px;
 }
-.team {
-  background-color: var(--section-color);
-}
-.team h2 {
-  color: var(--yellow-color);
-}
 .team .box h4 {
   background-color: var(--green-color);
 }
-.project {
+.project,
+.footer {
   background-color: var(--main-color);
 }
 .subscribe {
@@ -128,15 +124,9 @@ html {
   caret-color: var(--red-color);
   border-bottom: 1px solid white;
 }
-.subscribe ::placeholder {
-  color: white;
-}
 .subscribe input[type="submit"] {
   background-color: var(--main-color);
   color: var(--yellow-color);
-}
-.footer {
-  background-color: var(--main-color);
 }
 .footer .contact ul .facebook {
   background-color: #1877f2;
